Dokumentation ergänzt (ReadMe, JavaDoc und Zeilenkommentare)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,8 +25,10 @@ spring.banner.location=classpath:banner.txt
 # Respektive statt Mail-Versand nur Ausgabe in Konsole, wenn mail.debug=true
 # Bitte beachten, dass die Zugangsdaten damit zwar sicher nie auf Github landen, aber dass jeder, welcher Zugriff
 # auf den Notebook hat, auch das Passwort auslesen kann
+# overrideReceiver: Eine g\u00fcltige Mailadresse, welche f\u00fcrs Testen als Empf\u00e4nger-Adresse gew\u00e4hlt werden soll, unabh\u00e4ngig davon an welche Adresse die Mail eigentlich h\u00e4tte gesendet werden sollen, ansonsten auf "-" stellen
 mail.debug=false
 mail.senderaddress=${mailAddress}
+mail.overrideReceiver=${mailOverrideReceiver}
 spring.mail.host=${mailHost}
 spring.mail.port=587
 spring.mail.username=${mailUser}
