Debug standardmässig auf true für Mail und SMS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.banner.location=classpath:banner.txt
 # Bitte beachten, dass die Zugangsdaten damit zwar sicher nie auf Github landen, aber dass jeder, welcher Zugriff
 # auf den Notebook hat, auch das Passwort auslesen kann
 # overrideReceiver: Eine g\u00fcltige Mailadresse, welche f\u00fcrs Testen als Empf\u00e4nger-Adresse gew\u00e4hlt werden soll, unabh\u00e4ngig davon an welche Adresse die Mail eigentlich h\u00e4tte gesendet werden sollen, ansonsten auf "-" stellen
-mail.debug=false
+mail.debug=true
 mail.senderaddress=${mailAddress}
 mail.overrideReceiver=${mailOverrideReceiver}
 spring.mail.host=${mailHost}
