Update Spring Boot, Komp. für Java 11

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,7 @@ spring.banner.location=classpath:banner.txt
 mail.debug=false
 mail.senderaddress=${mailAddress}
 mail.overrideReceiver=${mailOverrideReceiver}
+mail.overrideSender=${mailOverrideSender}
 spring.mail.host=${mailHost}
 spring.mail.port=587
 spring.mail.username=${mailUser}
