--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
-/nbactions.xml
+# Compiled class file
+/target/
+
+# Log file
+*.log
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# VS Code specific
+/.settings/
+/.vscode/
+/.sts4-cache/
+.classpath
+.project
+
+# H2-Database
+*.mv.db
