--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,17 @@
     <artifactId>kantonaler-benachrichtigungsdienst</artifactId>
     <name>Kantonaler Benachrichtigungsdienst</name>
     <version>1.0.1</version>
+
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
     
     <!-- Importiert Das Spring Boot-Starter-Parent Projekt als Eltern-Maven-Projekt: https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent/2.0.4.RELEASE -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.4.RELEASE</version>
+        <version>2.1.9.RELEASE</version>
     </parent>
 
     <!-- Legt die einzelnen Abhängigkeiten des Maven-Projekts fest -->
@@ -30,7 +35,7 @@
         <dependency>
             <groupId>org.camunda.bpm</groupId>
             <artifactId>camunda-external-task-client</artifactId>
-            <version>1.0.0</version>
+            <version>1.2.2</version>
         </dependency>
         
         <!-- Importiert die Mail-Unterstützung für Spring Boot-Projekte -->
@@ -43,7 +48,7 @@
         <dependency>
             <groupId>com.twilio.sdk</groupId>
             <artifactId>twilio</artifactId>
-            <version>7.24.1</version>
+            <version>7.43.1</version>
         </dependency>
     </dependencies>
 
